prevent headings jumping

--- a/src/assets/styles/main/2-base/_extends.scss
+++ b/src/assets/styles/main/2-base/_extends.scss
@@ -4,8 +4,3 @@
   overflow: hidden;
   white-space: nowrap;
 }
-
-// Headings
-%header-default {
-  font-family: $font-family--primary;
-}
